# mlp

./: .gitignore  MLOPS_GUIDE.md  README.md  SUMMARY.md
app/: .env.example  README.md  index.html  package-lock.json
app/src/: App.css  App.tsx  index.css
app/src/components/: DrawingGrid.css  DrawingGrid.tsx  MLPPredictor.css  MLPPredictor.tsx
backend/: README.md  pyproject.toml
backend/src/: __init__.py  api.py  mlp.py  train.py
backend/trained_models/: mlp_v1.0_20251023_012146_acc1.000.pkl  model_registry.json
model/: README.md  analysis.ipynb  grid_search.ipynb  grid_search_results.csv  notebook.ipynb  pyproject.toml
model/src/: api.py  mlp.py  train.py
model/static/: custom.js
model/trained_models/: model_registry.json
