[project]
name = "model"
version = "0.1.0"
description = "MLP Pattern Recognition Model with MLOps practices"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
