[project]
name = "model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio>=5.49.1",
    "importnb>=2023.11.1",
    "ipynb>=0.5.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "panel>=1.8.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
